<resources>
    <string name="app_name">NIC Calc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="InputDescription">Enter your NIC number</string>
    <string name="calculateButton">Check!</string>
    <string name="bDayLabel">Your B\'day\t:</string>
    <string name="ageLabel">Your Age\t:</string>
    <string name="genderLabel">Gender\t\t:</string>
</resources>
